@@ -8,6 +8,7 @@ version 0.4.9
 * Selection of `prefix` for binary and hexadecimal representations.
 * Fix `cumsum` function bug when dealing with sizes bigger than 32 bits (windows) / 64 bits (linux) (issue #76).
 * Fix `numpy.reshape` function handling. This function was returning optimal size instead of same by default (issue #77).
+* Fix negative number parsing in `dtype` string (issue #80).
 
 version 0.4.8
 --------------------------------------------------
